--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'Indians of North America'
 - !lcsh 'Indian children -- North America'
 - !lcc 'E011'
+- GITenberg
 title: Indian Stories Retold From St. Nicholas
 url: http://www.gutenberg.org/ebooks/35021
